2012-06-09
 * template files for XML-RPC images
 * moved Obs. Vermes specific code to subdirectories

2012-06-06
 * code with XML/JSON exception - properly reply to wrong password

0.9.3-1
=====

2012-05-22
 * OBJECT camera value

2012-05-21
 * WCS auxiliary values

2012-05-11
 * isExposing returns -2 on exposure ends
 * removed camWaitExposure

2012-05-09
 * improves multiple channel WCS headers writing

2012-05-08
 * channel coordinates

2012-05-07
 * scheduler library
 * moved cupola to library file
 * MaxDome II (Sirius dome) sceleton

2012-05-04
 * Python libraries - scriptcomm.py, flats.py

2012-04-24
 * time on sky statistics

0.9.2-1
=====

2012-04-18
 * functional multiple channels readout, getDataBuffer function

0.9.1-1
=====

2012-04-17
 * exposure_overwrite command to overwrite created files
 * PROTO_BINARY_KILLED, functional shared memory readout

2012-04-10
 * rts2-state supports -e option

2012-04-06
 * expand_wfn with expand path

2012-04-03
 * errorReported in Element, error propagation through script

2012-03-31
 * rts2-user can edit login files, not only database

2012-03-26
 * support for multi channel devices

2012-03-25
 * rts2-mon can send command(s) with --command option
 * use crypt for DB passwords

2012-03-24
 * replace /\ etc. in expanded variables with _, fix path problems with targets containting / in name

2012-03-09
 * removed FWHM extimates, HAM (should be handled by external scripts)
 * removed XPLATE, YPLATE (transation to WCS only metadata

2012-03-07
 * removed guding, HAM and star acquistions (should be replaced by I/O scripting)
 * MPEC name resolving

2012-03-02
 * login files for non-DB XML-RPCDs.

2012-02-11
 * finished new guide.py
 * S, waitidle script commands
 * --without-on-power for Zelio domes

2012-02-02
 * center calculations

2012-02-01
 * finalised include directory structure
 * added killall_wse command (without script end)
 * s in suffix for autosave values

2012-01-29
 * log system startup errors